--- a/popup.html
+++ b/popup.html
@@ -270,7 +270,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🤖 AI Summarizer</h1>
+            <h1>🤖 RE-Ease</h1>
             <p>Powered by Google Gemini</p>
         </div>
         
